Karuna added chnages

--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -114,10 +114,19 @@
     height: 600px ! important;
   }
   .price-footer{
-    margin-top: 90px ! important;
+    margin-top: 38px ! important;
   }
   .blogtext h4{
     font-size: 15px ! important;
     height: 60px ! important;
+  }
+  .New_Study_shadow{
+    width: 250px ! important;
+  }
+  .iconCircle{
+    margin-left: 29% ! important;
+  }
+  .padding_Mob{
+    padding-left: 11px ! important;
   }
 }
