--- a/ui/website/src/allBlocks/Resourcevideo/Resourcevideo.css
+++ b/ui/website/src/allBlocks/Resourcevideo/Resourcevideo.css
@@ -164,6 +164,12 @@ height: 100px;
     width: 230px;
     margin: 0px;
   }
+  .Mobile_leftPadd{
+    padding-left: 0px ! important;
+  }
+  .mobileright_padd{
+    padding-right: 0px ! important;
+  }
   
 }
 @media screen and (min-width: 1900px) {
