--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -27,6 +27,9 @@
   /*margin-top: 10px;*/
 
 }
+.newfooterjoin{
+
+}
 .blogdate{
   text-align: justify;
   padding: 10px 20px;
@@ -116,9 +119,21 @@
   .price-footer{
     margin-top: 38px ! important;
   }
+  .blogrightarrow{
+    right: -42px ! important;
+  }
+  .blogleftarrow{
+    left:-42px ! important;
+  }
   .blogtext h4{
     font-size: 15px ! important;
-    height: 60px ! important;
+    height: 74px ! important;
+  }
+  .blogtext p{
+    margin-bottom: 60px ! important;
+  }
+  .blogdate{
+    margin-bottom: 15px ! important;
   }
   .New_Study_shadow{
     width: 250px ! important;
