--- a/ui/website/src/allBlocks/Downstream/Downstream.css
+++ b/ui/website/src/allBlocks/Downstream/Downstream.css
@@ -43,7 +43,8 @@
   margin-bottom:20px!important;
 }
 .contentheader{
-	margin-bottom:35px!important;
+  margin-top: 20px;
+	margin-bottom:20px!important;
 }
 .contentheader h1{
 	font-size: 41px;
