Karuna added chnages

--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -381,6 +381,9 @@
       .navigation_tab{
         margin-left: 48px ! important;
     }
+    .navigationTitle_for6{
+        left:815px ! important;
+    }
       
 }
 
