--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -794,11 +794,11 @@ height: 90px;
     z-index: 2;*/
 
 }
-.New_hoverdiv:hover .dataonHover2{
+/*.New_hoverdiv:hover .dataonHover2{
   cursor: pointer;
   display: block;
 }
-
+*/
 
 
 .pinhoverdata{
@@ -1471,11 +1471,15 @@ animation: fadeIn ease 20s;
       cursor: pointer;
       opacity: 1;
 }
-.petrolimage1:hover .new_HoverDiv2{
+/*.petrolimage1:hover .new_HoverDiv2{
    display: block ! important;
    cursor: pointer;
   opacity: 1;
 
+}*/
+#petrolimage1Div:hover .new_HoverDiv2{
+  display: block ! important;
+  cursor: pointer;
 }
 
 .onhoverimages{
