--- a/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
+++ b/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
@@ -27,6 +27,17 @@
 .typecomp1DIV1{
   padding-top: 64px;
 }
+.Typecomponent1Img{
+  width: 590px;
+  height: 380px;
+  /*padding-top: 50px;*/
+  /*float:right;*/
+}
+.TypecomponentImg img {
+    width: 500px;
+    height: 400px;
+    object-fit: contain;
+}
 /*.onselecthover:hover{
   cursor: pointer;
   border: 1px solid #aaa;
@@ -34,3 +45,15 @@
   
 
 }*/
+@media screen and (max-width: 600px) {
+    .Typecomponent1Img{
+    width: 300px;
+    height: 380px;
+    /*padding-top: 50px;*/
+    /*float:right;*/
+  }
+  .MobileDivHeight{
+    height: 550px ! important;
+  }
+
+}
