--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -22,7 +22,7 @@
   transition-duration: 0.7s;
   transition: width 1s;
   border: none;
-  z-index: 100000;
+  /*z-index: 100000;*/
   top:70px;
 }
 .envelopeIcon{
@@ -159,7 +159,7 @@
   font-size: 12px;    
   border: none;
   outline: none;
-  color: #000;
+  /*color: #000;*/
   padding: 14px 8px;
   background-color: inherit;
   /*font-family: inherit;*/
