--- a/ui/website/src/allBlocks/Downstream/Downstream.css
+++ b/ui/website/src/allBlocks/Downstream/Downstream.css
@@ -407,6 +407,7 @@
 .paraeff{
   position: relative;
   top :0px;
+  cursor: pointer;
   /*margin-left: 8px;*/
   transform: rotate(0deg);
   transition-duration: 0.5s;
