--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -1290,7 +1290,7 @@ animation: fadeIn ease 20s;
     
 
 .petrolimage1:hover{
-  z-index: 110;
+  z-index: 110 ! important;
   /*opacity: 1;*/
 }
 /*.waterimg:hover .new_HoverDiv {
