--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -428,6 +428,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
     transition: all .3s ease-in-out;
     border-radius: 4px;
 }
+.modal-backdrop{
+    z-index: 0 ! important;
+}
 
 
 .price-three span {
