--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -1074,9 +1074,9 @@ height: 90px;
 
 }
 .plantimage11{
-   position: absolute;
-  right: 75px;
-  top: 312px;
+  position: absolute;
+  right: 65px;
+  top: 299px;
   height: 100px;
   animation: slide-tl 4s;
   /*opacity: 1;*/
@@ -1499,6 +1499,7 @@ animation: fadeIn ease 20s;
     margin-top: -232px;
     margin-left: 82px;
     font-size: 13px;
+    font-weight: 500;
     padding-left: 10px;
     text-align: center;
     position: absolute;
@@ -1508,6 +1509,7 @@ animation: fadeIn ease 20s;
     top: 105px;
     position: absolute;
     width: 148px;
+    font-weight: 500;
     left: 86px;
     text-align: center;
     font-size: 13px;
@@ -1515,6 +1517,7 @@ animation: fadeIn ease 20s;
 .newhovertxt_6{
   margin-top: -176px;
   margin-left: 68px;
+  font-weight: 500;
   font-size: 12px;
   padding-left: 10px;
   text-align: center;
@@ -1524,9 +1527,10 @@ animation: fadeIn ease 20s;
 .newhovertxt_8{
     margin-top: -249px;
     margin-left: 86px;
-    font-size: 12.8px;
+    font-size: 12.6px;
     padding-left: 10px;
     text-align: center;
+    font-weight: 500;
     width: 144px;
     position: absolute;
 }
@@ -1535,6 +1539,7 @@ animation: fadeIn ease 20s;
   margin-left: 62px;
   font-size: 12px;
   padding-left: 10px;
+  font-weight: 500;
   text-align: center;
   position: fixed;
   width: 122px;
@@ -1544,6 +1549,7 @@ animation: fadeIn ease 20s;
     margin-left: 91px;
     font-size: 12.5px;
     width: 150px;
+    font-weight: 500;
     /* padding-left: 10px; */
     text-align: center;
     position: absolute;
@@ -1551,6 +1557,7 @@ animation: fadeIn ease 20s;
 .newhovertxt_5{
   margin-top: 78px;
   margin-left: 62px;
+  font-weight: 500;
   font-size: 12px;
   padding-left: 10px;
   text-align: center;
@@ -1559,6 +1566,7 @@ animation: fadeIn ease 20s;
     margin-top: -243px;
     margin-left: 85px;
     font-size: 13px;
+    font-weight: 500;
     padding-left: 10px;
     text-align: center;
     position: absolute;
@@ -1571,6 +1579,7 @@ animation: fadeIn ease 20s;
     font-size: 12.5px;
     padding-left: 10px;
     text-align: center;
+    font-weight: 500;
     position: absolute;
     width: 128px;
 
@@ -1901,7 +1910,7 @@ svg {
 }
 #blackbannerDiv{
 
-  background:#0f0f0fde;
+  background:#0f0f0f9e;
   position: absolute;
   /*animation: dripple1 1s ease-out 1s;*/
   animation: fadeIn ease 3s;
