--- a/ui/website/src/allBlocks/Careerimpactcomponent/Careerimpact.css
+++ b/ui/website/src/allBlocks/Careerimpactcomponent/Careerimpact.css
@@ -29,7 +29,7 @@
 .career2_img{
   width: 95%;
     margin-top: 206px;
-    padding-left: 66px;
+    /*padding-left: 66px;*/
     height: 434px;
 }
 
