--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -867,6 +867,84 @@ height: 90px;
    /*opacity: 0.7;*/
 
 }
+.boat_img2_img{
+  width: 240px;
+}
+.waterimg2Div_img{
+  width:135px; 
+}
+.petrolimage1_img{
+  width: 255px;
+}
+.oilimage_img{
+  width: 255px;
+
+}
+.plantimage11_img{
+  width: 255px;
+}
+@media screen and (min-width: 1900px) {
+  .bannerContainer1{
+    height: 55em ! important;
+  }
+  #blackbannerDiv{
+    height: 55em ! important;
+  }
+  .boat_img2{
+    left:545px ! important;
+    top:331px ! important;
+  }
+  .boat_img2_img{
+    width: 330px ! important;
+  }
+  .waterimg2Div_img{
+    width:230px ! important; 
+  }
+  .waterimg2{
+    top:62% ! important;
+    left:16% ! important;
+  }
+  .nexttogasimg_size{
+    width: 330px ! important;
+  }
+  .nexttogasimage{
+    right: 541px ! important;
+    top:350px ! important;
+  }
+  .petrolimage1_img{
+    width: 330px ! important;
+  }
+  .petrolimage1{
+    top:500px ! important;
+  }
+  .oilimage_img{
+    width: 330px ! important;
+    
+  }
+  .plantimage11_img{
+    width: 330px ! important;
+  }
+  .plantimage11{
+    right: 26px ! important;
+    top:341px ! important;
+  }
+  .boat_img{
+    width: 500px ! important;
+    height:270px ! important;
+  }
+  .boat_img_size{
+    width: 230px ! important;
+  }
+  .waterimg_size{
+    width: 190px ! important;
+  }
+  .topnav a{
+    font-size: 15px ! important;
+  }
+  .dropdown .dropbtn{
+    font-size: 15px ! important;
+  }
+}
 @media only screen (min-width: 1600px) {
   .bannerContainer1{
     height: 55em ! important;
@@ -963,7 +1041,7 @@ height: 90px;
   height: 38em ! important;
 }
 .tabimage{
-  width: 150px ! important;
+  width: 180px ! important;
 }
 .plantimage11{
   right: 47px ! important;
