--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -431,6 +431,7 @@ margin-top: 100px;
 
 .director_img{
   width: 100%;
+  margin-top: 65px;
   /* margin-left: 171px; */
   /*margin-top: 235px;*/
   border: 9px solid #fff;
@@ -438,7 +439,7 @@ margin-top: 100px;
 }
 .director_imgDiv{
   /*padding-left: 170px;*/
-    padding-top: 45px;
+    padding-top: 30px;
 }
 .DirectorText{
   padding-top: 27px;
@@ -528,7 +529,7 @@ margin-top: 100px;
   background-image: url("/images/Founder-Profiles.png");
   background-size: 100% 100%;
   /*height: auto;*/
-  height: 1045px;
+  height: 1150px;
 }
 
 
