--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -313,11 +313,9 @@
  .BT4_txt{
     margin-left: 43px;
  }
- .new_round-tabfor4{
-    margin-left:127%;
- }
+ 
  .new_wizardNotefor4{
-    left:109px;
+    /*left:109px;*/
  }
 .new_wizardNotefor5{
     /*right: -59px ! important;*/
@@ -345,17 +343,21 @@
     margin-bottom: 0px ! important;
 }
 }
-@media (max-width: 480px){
+@media only screen and (min-width: 768px)  {
+  
+}
+@media screen and (min-width: 480px) {
 .adjustfor5{
     margin-left: 10px ! important;
 }
-.new_round-tabfor4{
+/*.new_round-tabfor4{
     margin-left:27% ! important;
-}
+}*/
+/*
 .new_wizardNotefor4 {
     left: -6px ! important;
     font-size: 12px ! important;
-}
+}*/
 .pt20{
     padding-top: 24px ! important;
 }
