--- a/ui/website/src/blockTemplate/News_Events/News_Events.css
+++ b/ui/website/src/blockTemplate/News_Events/News_Events.css
@@ -89,3 +89,9 @@
   height: 200px;
   width: 300px;
 }
+@media screen and (max-width:768px){
+  .blogsimg1{
+    height: 150px ! important;
+  }
+} 
+ 
