--- a/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
+++ b/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
@@ -12,9 +12,15 @@
 	font-size: 17px ! important;
   color: #333;
 }
+.righttextaboutus ul{
+  padding-left: 16px ! important;
+}
 .energypagedata p{
 	font-size: 17px ! important;
 	text-align: justify;
+}
+.Type1_comp_padd{
+  padding-left: 40px;
 }
 
 .intro_img{
@@ -48,12 +54,42 @@
 @media screen and (max-width: 600px) {
     .Typecomponent1Img{
     width: 300px;
-    height: 380px;
+    height: 240px;
     /*padding-top: 50px;*/
     /*float:right;*/
   }
   .MobileDivHeight{
-    height: 550px ! important;
+    height: 600px ! important;
   }
 
 }
+
+@media (min-width:320px){
+
+  .MobileDivHeight{
+    height: 635px ! important;
+  }
+    .Type1_comp_padd{
+    padding-left: 10px;
+  }
+}
+@media (min-width:768px){
+  .MobileDivHeight{
+    height: 300px ! important;
+  }
+
+  .responsivefooter{
+    height: 360px ! important;
+  }
+ /* .new_round-tabfor4{
+    margin-left:127% ! important;
+ }*/
+/* .new_wizardNotefor4{
+  left:113px ! important;
+ }*/
+ .resmr20{
+  color:#fff ! important;
+ }
+
+}
+
