--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -49,7 +49,7 @@
   transition-duration: 0.7s;
   transition: width 1s;
   border: none;
-  z-index: 100000;
+  /*z-index: 100000;*/
   top:95px;
 }
 .navbar-static-top{
