--- a/ui/website/src/blockTemplate/TemplateOverview/TemplateOverview.css
+++ b/ui/website/src/blockTemplate/TemplateOverview/TemplateOverview.css
@@ -74,12 +74,18 @@
   /*height: 300px;*/
   margin-bottom: 40px;
 }
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .tempaltepadding{
+    padding-left: 0px ! important;
+    padding-right: 0px ! important; 
+  }
+}
 @media(max-width : 768px){
   .B2T1_line{
     margin-left: 172px;
   }
   .B2T_p{
-    padding-left: 0px ! important;
+    padding-right: 0px ! important;
   }
 }
 @media(max-width : 767px){
